argocd/immich/nfs-pvc.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: immich
